# ros2-robot-test-tools

./: .gitignore
docking_accuracy_test/: package.xml  setup.cfg  setup.py
docking_accuracy_test/docking_accuracy_test/: docking_accuracy_test_node.py  gt_localization_node.py  random_staging_docking_test_node.py
docking_accuracy_test/launch/: docking_accuracy_test.launch.py  docking_test_gt.launch.py  docking_test_localization.launch.py  random_staging_docking_test.launch.py
docking_accuracy_test/result/: docking_accuracy_20260316_155856.csv  docking_accuracy_20260316_160110.csv  docking_accuracy_20260316_160531.csv  docking_accuracy_20260316_160802.csv  docking_accuracy_20260316_161650.csv
temp_package/: CMakeLists.txt  package.xml
v_shape_pose_publisher/: package.xml  setup.cfg  setup.py
v_shape_pose_publisher/launch/: v_shape_pose_publisher.launch.py
v_shape_pose_publisher/v_shape_pose_publisher/: v_shape_pose_publisher.py
