<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>temp_package</name>
  <version>0.0.1</version>
  <description>Meta-package for temporary utility packages</description>
  <maintainer email="jeongmin@todo.todo">jeongmin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>v_shape_pose_publisher</exec_depend>
  <exec_depend>docking_accuracy_test</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
